--- a/2-2_t.html
+++ b/2-2_t.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>宿舍分配系统</title>
+    <title>高校宿舍管理系统</title>
     <style>
 	/* 全局样式 */
 html, body {
