--- a/2-3.html
+++ b/2-3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>宿舍卫生评选系统</title>
+    <title>高校宿舍管理系统</title>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <style>
 	/* 全局样式 */
