--- a/3-3_t.html
+++ b/3-3_t.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>宿舍维修管理系统</title>
+    <title>高校宿舍管理系统</title>
     <style>
 	/* 全局样式 */
 html, body {
