--- a/4-1_t.html
+++ b/4-1_t.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>宿舍管理系统-通知公告</title>
+    <title>高校宿舍管理系统</title>
     <style>
 	/* 全局样式 */
 html, body {
