--- a/5-1.html
+++ b/5-1.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>宿舍管理系统-人员管理</title>
+    <title>高校宿舍管理系统</title>
     <style>
 	/* 全局样式 */
 html, body {
