--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>宿舍管理系统 - 登录</title>
+    <title>高校宿舍管理系统</title>
     <style>
         body {
             font-family: 'Microsoft YaHei', Arial, sans-serif;
